# rra-c-util

./: .clang-format  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile.am  NEWS  README  README.md  TODO  autogen  bootstrap  configure.ac  mkusage
.github/workflows/: build.yaml
changelog.d/: 20231230_193226_eagle.md  20240210_160848_eagle.md  20240217_084600_eagle.md  20240217_092424_eagle.md  20240313_194306_eagle.md  20240317_224358_eagle.md  20240317_224621_eagle.md  20250810_100345_eagle_update_ci.md  20250810_101611_eagle_update_ci.md  20250810_114220_eagle_perlcritic.md  20250810_131234_eagle.md  20250810_141357_eagle.md  20250810_213743_eagle.md  20250811_153549_eagle.md  20250814_104241_eagle.md  20250815_112335_eagle.md  20250815_113649_eagle.md  20250828_221743_eagle.md  20260209_193130_eagle.md  scriv.ini
ci/: README  apt-packages  cpanfile  install  test
docs/: docknot.yaml
docs/api/: xmalloc.pod
docs/metadata/: description  metadata.json  requirements
docs/metadata/sections/: using-this-code
docs/metadata/test/: suffix
include/: librutil.h
kafs/: api.c  kafs.c  linux.c  sys-darwin10.c  sys-darwin8.c  sys-linux.c  sys-solaris.c  sys-syscall.c
m4/: apache.m4  apr.m4  aprutil.m4  bdb.m4  cc-flags.m4  curl.m4  gssapi.m4  inet-ntoa.m4  kadm5clnt.m4  kafs.m4  krb4.m4  krb5-config.m4  krb5-pkinit.m4  krb5.m4  ld-version.m4  ldap.m4  lib-depends.m4  lib-helper.m4  lib-pathname.m4  libevent.m4  openssl.m4  pam-const.m4  pcre.m4  perl.m4  python.m4  remctl.m4  sasl.m4  snprintf.m4  socket-unix.m4  socket.m4  sqlite.m4  sqlite3.m4  ssl.m4  systemd.m4  tinycdb.m4  vamacros.m4  zlib.m4
pam-util/: args.c  args.h  logging.c  logging.h  options.c  options.h  vector.c  vector.h
perl/: Build.PL  Changes  MANIFEST  MANIFEST.SKIP  README
perl/lib/: Empty.pm
perl/t/: critic.t  minimum-version.t  pod-coverage.t  pod-spelling.t  pod.t  strict.t  synopsis.t
perl/t/api/: empty.t
perl/t/data/: perl.conf
perl/t/docs/: pod-coverage.t  pod.t  spdx-license.t
perl/t/style/: coverage.t  critic.t  module-version.t  obsolete-strings.t  strict.t
portable/: apr.h  asprintf.c  daemon.c  dummy.c  event-extra.c  event.h  getaddrinfo.c  getaddrinfo.h  getnameinfo.c  getnameinfo.h  getopt.c  getopt.h  gssapi-mech.c  gssapi.h  inet_aton.c  inet_ntoa.c  inet_ntop.c  issetuidgid.c  k_haspag.c  kadmin.h  kafs.h  krb4.h  krb5-extra.c  krb5-profile.c  krb5-renew.c  krb5.h  lifetime.c  pam.h  pam_syslog.c  pam_vsyslog.c  sd-daemon.c  sd-daemon.h  setenv.c  seteuid.c  snprintf.c  socket-unix.h  socket.h  statvfs.h  strndup.c  system.h  (+2 more)
tests/: TESTS  libtest.c  libtest.h  runtests.c
tests/data/: cppcheck.supp  fake-aklog  perl.conf  perlcriticrc  perltidyrc  valgrind.supp
tests/docs/: pod-spelling-t  pod-t  spdx-license-t  urls-t
tests/fakepam/: config.c  data.c  general.c  internal.h  logging.c  pam.h  script.c  script.h  testing.c  testing.h
tests/kafs/: basic-t  basic.c  haspag-t.c
tests/pam-util/: args-t.c  fakepam-t.c  logging-t.c  options-t.c  vector-t.c
tests/perl/: critic-t  minimum-version-t  module-version-t  strict-t
tests/portable/: asprintf-t.c  daemon-t.c  getaddrinfo-t.c  getnameinfo-t.c  getopt-t.c  inet_aton-t.c  inet_ntoa-t.c  inet_ntop-t.c  mkstemp-t.c  reallocarray-t.c  setenv-t.c  setenv.t  snprintf-t.c  strlcat-t.c  strlcpy-t.c  strndup-t.c
tests/style/: obsolete-strings-t
tests/tap/: basic.c  kadmin.c  kadmin.h  kerberos.c  kerberos.h  kerberos.sh  kinit.c  messages.c  messages.h  process.c  process.h  remctl.c  remctl.h  remctl.sh
tests/tap/perl/Test/: RRA.pm
tests/tap/perl/Test/RRA/: Automake.pm  Config.pm  ModuleVersion.pm
tests/util/: buffer-t.c  concat-t.c  error-t.c  fakewrite.c  fakewrite.h  fdflag-t.c  messages-krb5-t.c  messages-t.c  network-t.c  vector-t.c  xmalloc-t  xmalloc.c  xmalloc.t  xwrite-t.c
tests/util/network/: addr-ipv4-t.c  addr-ipv6-t.c  client-t.c  server-t.c
tests/valgrind/: logs-t
util/: buffer.c  buffer.h  fdflag.c  fdflag.h  macros.h  messages-die.c  messages-krb5.c  messages-krb5.h  messages.c  messages.h  network.c  network.h  util.h  vector.c  vector.h  xmalloc.c  xmalloc.h  xwrite.c  xwrite.h
